@@ -49,7 +49,7 @@ public interface Directory
     /**
      * Renames the specified DataAccess object into one.
      */
-    DataAccess rename( DataAccess da, String newName );
+    // DataAccess rename( DataAccess da, String newName );
 
     /**
      * Removes the specified object from the directory.
