@@ -1,4 +1,5 @@
 0.3.0
+    removed unused directory.rename
     refactor edge.copyProperties into copyPropertiesTo to have similar semantics as Graph.copyTo
     calcWeight now contains reverse boolean to calculate correct direction dependent weight
     completely different web API response format. see docs/web
